// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component props snapshot for button 1`] = `
<button
  aria-describedby={undefined}
  className="foo field-config"
  disabled={undefined}
  id="button-2"
  onBlur={undefined}
  onClick={[Function]}
  onFocus={undefined}
/>
`;

exports[`Button component props snapshot for submit 1`] = `
<input
  aria-describedby={undefined}
  className="foo field-config"
  disabled={undefined}
  id="button-1"
  onBlur={undefined}
  onClick={[Function]}
  onFocus={undefined}
  required={undefined}
  type="submit"
  value={undefined}
/>
`;
